--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
