Update packages, install detect print

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.4.1",
+    "use-detect-print": "0.0.2",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
